--- a/src/App.css
+++ b/src/App.css
@@ -228,3 +228,41 @@ border-top-right-radius: 10px;
     transform: rotate(360deg);
   }
 }
+.flexbox{
+  display: flex;
+  width: 60%;
+  margin: auto;
+  margin-top: 50px;
+  /* justify-content: space-between; */
+border-radius: 10px;
+height:400px;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
+
+}
+
+.imagebox{
+  width: 50%;
+  height:100%;
+}
+
+.imagebox>img{
+  border-top-left-radius: 10px;
+  border-bottom-left-radius: 10px;
+  width:100%;
+  height:100%;
+  object-fit: cover;
+}
+.flexbox>:nth-child(2){
+  display: flex;
+  flex-direction:column;
+  justify-content:space-around;
+  text-align:left;
+  margin-left: 70px;
+}
+
+.flexbox h5,h2,h4{
+  text-transform: uppercase;
+}
+.flexbox h2{
+  color:crimson;
+}
